--- a/manager/templates/__base.jade
+++ b/manager/templates/__base.jade
@@ -5,6 +5,10 @@ html(lang="en")
     block style
 
   body
+    - include '_okfn-header.jade'
+  
     block content
 
     block scripts
+	
+    - include '_okfn-footer.jade'
