New HTML : OKFN header

--- a/manager/templates/_okfn-header.jade
+++ b/manager/templates/_okfn-header.jade
@@ -1,1 +1,32 @@
-p test footer
+div.okfn-top
+	div.navbar
+		div.navbar-inner
+			div.container
+				div.okfn-ribbon 
+					| a(href="http://okfn.org/" data-toggle="collapse", data-target="#okf-panel", title="Part of the Open Knowledge Foundation Network")
+				    | An Open Knowledge Foundation Site                 
+                            a(data-target=".nav-collapse", data-toggle="collapse">
+                               |	span.icon-bar
+                               |	span.icon-bar
+                               |	span.icon-bar
+                              
+                              a.brand(title="Home", href="http://product.okfn.org")
+								|	img(src="http://product.okfn.org/files/2013/09/cropped-openproduct_601.png", alt="logo")
+								|	Open Product Data      
+								| 	nav.nav-collapse
+								|		ul.nav(id="nav")
+								|			li(id="menu-item-1")	
+								|				| a(href="http://product.okfn.org/")
+								|				| Home
+								|			li(id="menu-item-5")
+								|				|a(href="http://product.okfn.org/advisory-board/)
+								|				| Advisory Board
+								|			li(id="menu-item-2")
+								|				| a(href="http://product.okfn.org/blog/")
+								|				| Blog
+								|			li(id="menu-item-3")
+								|				| a(href="http://product.okfn.org/barcode-gs1/")
+								|				| Resources
+								|			li(id="menu-item-4")
+								|				| a(title="POD &#8211; Product Open Data", href="http://www.product-open-data.com"
+								|				| Browse Data
