--- a/manager/templates/_header.jade
+++ b/manager/templates/_header.jade
@@ -1,3 +1,6 @@
-title Brand Manager OKFN
-link(rel='stylesheet', href='{{ STATIC_URL }}main/css/style.css')
+- load compress
 
+title Brand Manager OKFN
+
+- compress css
+  link(rel='stylesheet', href='{{ STATIC_URL }}main/css/style.css')
