Add content div

--- a/manager/templates/_okfn-header.jade
+++ b/manager/templates/_okfn-header.jade
@@ -32,3 +32,5 @@ div.okfn-top
               li(id="menu-item-4")
                 a(title="POD &#8211; Product Open Data", href="http://www.product-open-data.com")
                   | Browse Data
+
+div(id="content")
