--- a/manager/apps/main/static/main/css/style.css
+++ b/manager/apps/main/static/main/css/style.css
@@ -1,9 +1,20 @@
+body {
+	font-family: OpenSans, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-size: 12px;
+	margin-bottom: 0px;
+	margin-left: 0px;
+	margin-right: 0px;
+	margin-top: 0px;
+	padding-top: 0px;				
+	display: block;	
+}
 
-				
-	
-				
-
-				
+#content {
+	margin-right: auto;
+	margin-left: auto;	
+	width: 970px;
+}				
+					
 .okfn-top {
 	color: rgb(255, 255, 255);
 	display: block;
