--- a/manager/templates/__base.jade
+++ b/manager/templates/__base.jade
@@ -6,10 +6,11 @@ html(lang="en")
 
   body
     - include '_okfn-header.jade'
+  
 
-    block content
+    #content
+      block content
 
     block scripts
 
     - include '_okfn-footer.jade'
-
