Adding POD logo.

--- a/manager/templates/_okfn-header.jade
+++ b/manager/templates/_okfn-header.jade
@@ -12,7 +12,7 @@ div.okfn-top
           span.icon-bar
         
         a.brand(title="Home", href="http://product.okfn.org")
-          img(src="http://product.okfn.org/files/2013/09/cropped-openproduct_601.png", alt="logo")
+          img(src="{{ STATIC_URL }}main/images/pod-logo.png", alt="logo")
           | Open Product Data
 
         nav.nav-collapse
