Add Brand OKFN logo

--- a/manager/templates/main/home.jade
+++ b/manager/templates/main/home.jade
@@ -1,5 +1,6 @@
 - extends '__base.jade'
 
 block content
-  h1 Open Knowledge Foundation - Product Open Data
+  h1 Home
   h2 Brand manager
+  img(scr={{ STATIC_URL }}main/images/brand_logo_200.png)
