Fixing jade syntax in template

--- a/manager/templates/main/home.jade
+++ b/manager/templates/main/home.jade
@@ -3,4 +3,4 @@
 block content
   h1 Home
   h2 Brand manager
-  img(scr={{ STATIC_URL }}main/images/brand_logo_200.png)
+  img(src='{{ STATIC_URL }}main/images/brand_logo_200.png')
