Import CSS Font because of relative link inside

--- a/manager/apps/main/static/main/css/style.css
+++ b/manager/apps/main/static/main/css/style.css
@@ -1,134 +1,4 @@
-/*
- * Start of Embedded Font
- * ---------------------------------------------------------------------------------------------------
- * (Must be hosted from the same domain!)
- */
-
-/* Open Sans */
-@font-face {
-    font-family: 'OpenSans';
-    src: url('OpenSans-Light-webfont.eot');
-    src: url('OpenSans-Light-webfont.eot?#iefix') format('embedded-opentype'),
-         url('OpenSans-Light-webfont.woff') format('woff'),
-         url('OpenSans-Light-webfont.ttf') format('truetype'),
-         url('OpenSans-Light-webfont.svg#OpenSansLight') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'OpenSans';
-    src: url('OpenSans-LightItalic-webfont.eot');
-    src: url('OpenSans-LightItalic-webfont.eot?#iefix') format('embedded-opentype'),
-         url('OpenSans-LightItalic-webfont.woff') format('woff'),
-         url('OpenSans-LightItalic-webfont.ttf') format('truetype'),
-         url('OpenSans-LightItalic-webfont.svg#OpenSansLightItalic') format('svg');
-    font-weight: normal;
-    font-style: italic;
-}
-
-@font-face {
-    font-family: 'OpenSans';
-    src: url('OpenSans-Semibold-webfont.eot');
-    src: url('OpenSans-Semibold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('OpenSans-Semibold-webfont.woff') format('woff'),
-         url('OpenSans-Semibold-webfont.ttf') format('truetype'),
-         url('OpenSans-Semibold-webfont.svg#OpenSansSemibold') format('svg');
-    font-weight: bold;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'OpenSans';
-    src: url('OpenSans-SemiboldItalic-webfont.eot');
-    src: url('OpenSans-SemiboldItalic-webfont.eot?#iefix') format('embedded-opentype'),
-         url('OpenSans-SemiboldItalic-webfont.woff') format('woff'),
-         url('OpenSans-SemiboldItalic-webfont.ttf') format('truetype'),
-         url('OpenSans-SemiboldItalic-webfont.svg#OpenSansSemibold') format('svg');
-    font-weight: bold;
-    font-style: italic;
-}
-
-
-/* Eraser */
-@font-face {
-    font-family: 'EraserRegular';
-    src: url('EraserRegular-webfont.eot');
-    src: url('EraserRegular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('EraserRegular-webfont.woff') format('woff'),
-         url('EraserRegular-webfont.ttf') format('truetype'),
-         url('EraserRegular-webfont.svg#EraserRegular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-
-/* Cabin Sketch */
-@font-face {
-    font-family: 'CabinSketch';
-    src: url('CabinSketch-Regular-webfont.eot');
-    src: url('CabinSketch-Regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('CabinSketch-Regular-webfont.woff') format('woff'),
-         url('CabinSketch-Regular-webfont.ttf') format('truetype'),
-         url('CabinSketch-Regular-webfont.svg#CabinSketchRegular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'CabinSketch';
-    src: url('CabinSketch-Bold-webfont.eot');
-    src: url('CabinSketch-Bold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('CabinSketch-Bold-webfont.woff') format('woff'),
-         url('CabinSketch-Bold-webfont.ttf') format('truetype'),
-         url('CabinSketch-Bold-webfont.svg#CabinSketchBold') format('svg');
-    font-weight: bold;
-    font-style: normal;
-}
-
-/* PTSans */
-@font-face {
-    font-family: 'PTSans';
-    src: url('PTS76F-webfont.eot');
-    src: url('PTS76F-webfont.eot?#iefix') format('embedded-opentype'),
-         url('PTS76F-webfont.woff') format('woff'),
-         url('PTS76F-webfont.ttf') format('truetype'),
-         url('PTS76F-webfont.svg#PTSansBoldItalic') format('svg');
-    font-weight: bold;
-    font-style: italic;
-}
-@font-face {
-    font-family: 'PTSans';
-    src: url('PTS75F-webfont.eot');
-    src: url('PTS75F-webfont.eot?#iefix') format('embedded-opentype'),
-         url('PTS75F-webfont.woff') format('woff'),
-         url('PTS75F-webfont.ttf') format('truetype'),
-         url('PTS75F-webfont.svg#PTSansBold') format('svg');
-    font-weight: bold;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'PTSans';
-    src: url('PTS56F-webfont.eot');
-    src: url('PTS56F-webfont.eot?#iefix') format('embedded-opentype'),
-         url('PTS56F-webfont.woff') format('woff'),
-         url('PTS56F-webfont.ttf') format('truetype'),
-         url('PTS56F-webfont.svg#PTSansItalic') format('svg');
-    font-weight: normal;
-    font-style: italic;
-}
-@font-face {
-    font-family: 'PTSans';
-    src: url('PTS55F-webfont.eot');
-    src: url('PTS55F-webfont.eot?#iefix') format('embedded-opentype'),
-         url('PTS55F-webfont.woff') format('woff'),
-         url('PTS55F-webfont.ttf') format('truetype'),
-         url('PTS55F-webfont.svg#PTSansRegular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-
-/*
- * END of Embedded Font
- * ----------------------------------------------------------------------------------------------------------------------------
- */
+@import url('http://product.okfn.org/wp-content/themes/wordpress-theme-okfn/fonts/stylesheet.css');
 
 body {
 	font-family: OpenSans, 'Helvetica Neue', Helvetica, Arial, sans-serif;
