--- a/manager/apps/main/static/main/css/style.css
+++ b/manager/apps/main/static/main/css/style.css
@@ -26,7 +26,6 @@ body {
 	line-height: 20px;
 	margin-bottom: 15px;
 	margin-top: 0px;
-	width: 1903px;
 }
 
 .navbar {
@@ -39,7 +38,6 @@ body {
 	margin-bottom: 0px;
 	overflow-x: visible;
 	overflow-y: visible;
-	width: 1903px;	
 }
 
 .navbar-inner {
@@ -85,7 +83,6 @@ body {
 	min-height: 40px;
 	padding-left: 0px;
 	padding-right: 0px;
-	width: 1903px;
 }
 
 .container {
@@ -95,8 +92,8 @@ body {
 	font-size: 14px;
 	height: 66px;
 	line-height: 20px;
-	margin-left: 481.5px;
-	margin-right: 481.5px;
+	margin-right: auto;
+	margin-left: auto;	
 	max-width: 940px;
 	width: 940px;
 }
