Change Home page style

--- a/manager/apps/main/static/main/css/style.css
+++ b/manager/apps/main/static/main/css/style.css
@@ -15,6 +15,13 @@ body {
 	margin-right: auto;
 	margin-left: auto;	
 	width: 970px;
+
+	min-height:600px; 
+	/*
+	height:auto !important; 
+	height:100%; 
+	min-height:100%; 
+	*/
 }				
 					
 .okfn-top {
