--- a/manager/templates/main/home.jade
+++ b/manager/templates/main/home.jade
@@ -1,6 +1,6 @@
 - extends '__base.jade'
 
 block content
-  h1 Home
-  h2 Brand manager
-  img(src='{{ STATIC_URL }}main/images/brand_logo_200.png')
+
+  img(src='{{ STATIC_URL }}main/images/brand_logo_200.png',style='float:left;padding-right:20px;')
+  h1 Welcome to the <b>Brand Repository</b> of the <b>Open Knowledge Foundation</b> 
