--- a/manager/apps/main/static/main/css/style.css
+++ b/manager/apps/main/static/main/css/style.css
@@ -11,18 +11,31 @@ body {
 	display: block;	
 }
 
-#content {
+
+
+
+#main-wrap {
 	margin-right: auto;
 	margin-left: auto;	
 	width: 970px;
-
+	overflow: hidden;
 	min-height:600px; 
 	/*
 	height:auto !important; 
 	height:100%; 
 	min-height:100%; 
 	*/
-}				
+}	
+
+#sidebar {
+    float: left;
+    width: 220px;
+}
+
+#content {
+    float: right;
+    width: 750px;
+}  			
 					
 .okfn-top {
 	color: rgb(255, 255, 255);
