--- a/manager/templates/main/brandlist.jade
+++ b/manager/templates/main/brandlist.jade
@@ -26,12 +26,15 @@ block content
       for brand in brands
         tr
           td.brand-table-td
-           a(href='{% url "brandlist" %}{{brand.bsin}}') {{brand.brand_nm}}
+           a(href='{% url "brandlist" %}{{ brand.bsin }}') {{ brand.brand_nm }}
           td.brand-table-td-logo
-            img(src="{{brand.brand_logo_src}}",height='50')
+            if brand.brand_logo
+              img(src="{{ MEDIA_URL }}{{ brand.brand_logo.name }}", title="{{ brand.brand_nm }}", alt="{{brand.brand_nm}}", height='50')
+            else
+              img(src="{{ STATIC_URL }}brand/images/no_picture.gif", title="{{ brand.brand_nm }}", alt="{{brand.brand_nm}}", height='50')
           td.brand-table-td
             if brand.brand_link
-              a(href="http://#{brand.brand_link}") #{brand.brand_link}
+              a(href="{{ brand.brand_link }}") {{ brand.brand_link }}
             else
               h4 No link
               
