--- a/manager/templates/main/brand.jade
+++ b/manager/templates/main/brand.jade
@@ -9,7 +9,7 @@ block content
   if owner
     if owner.owner_link
       h2 Owned by 
-        a(href="{{ owner.owner_link }}") {{ owner.owner_nm }}
+        a(href=owner.owner_link) {{ owner.owner_nm }}
     else
       h2 Owned by {{ owner.owner_nm }}
   else
@@ -19,12 +19,12 @@ block content
     tbody
       td.brand-table-td-logo-full
         if brand.brand_logo
-            img(src="{{ brand.brand_logo.url }}",height='150',title="{{ brand.brand_nm }}", alt="{{brand.brand_nm}} logo")
+            img(src=brand.brand_logo.url,height='150',title=brand.brand_nm, alt="{{brand.brand_nm}} logo")
         else
-            img(src="{{ STATIC_URL }}brand/images/no_picture.gif",height='150',title="{{ brand.brand_nm }}", alt="{{brand.brand_nm}} logo")
+            img(src="{{ STATIC_URL }}brand/images/no_picture.gif",height='150',title=brand.brand_nm, alt="{{brand.brand_nm}} logo")
       td.brand-table-td-infos
         p <b>BSIN</b>: {{ brand.bsin }}
         p <b>Type</b>: {{ brand.brand_type_cd.brand_type_nm }}
         if brand.brand_link
           p <b>Website</b>: 
-            a(href="{{ brand.brand_link }}") {{ brand.brand_link }}
+            a(href=brand.brand_link) {{ brand.brand_link }}
