--- a/manager/templates/_sidebar.jade
+++ b/manager/templates/_sidebar.jade
@@ -11,7 +11,7 @@ img(src='{{ STATIC_URL }}main/images/brand_logo_200.png',style='padding:0px;marg
         span
           | Brand List
     li
-      a(href="{% url 'home' %}")
+      a(href="{% url 'ownerlist' %}")
         span
           | Owner List
     li
