Add brand proposal form with placeholder template

--- a/manager/templates/_sidebar.jade
+++ b/manager/templates/_sidebar.jade
@@ -15,7 +15,7 @@ img(src='{{ STATIC_URL }}main/images/brand_logo_200.png',style='padding:0px;marg
         span
           | Owner List
     li
-      a(href="{% url 'home' %}")
+      a(href="{% url 'brandproposal' %}")
         span
           | Add a brand
     li
