Link to brand table live dump. This is bad as it uses a lot of resources for each client asking for the dump and is slower for the client. This should be changed to a cron at a frequency to be defined in issue #42 .

--- a/manager/templates/_sidebar.jade
+++ b/manager/templates/_sidebar.jade
@@ -19,6 +19,6 @@ img(src='{{ STATIC_URL }}main/images/brand_logo_200.png',style='padding:0px;marg
         span
           | Add a brand
     li
-      a(href="{% url 'api' %}")
+      a(href="{% url 'extract' %}")
         span
           | Download & API
