--- a/manager/templates/main/extract.jade
+++ b/manager/templates/main/extract.jade
@@ -7,7 +7,9 @@ block content
 
   h1 Download dump
 
-  p Not available yet.
+  p Latest dump :
+
+  a(href="{% url 'dump' %}") Current live dump
 
   h1 API
 
