Add first version of text on homepage

--- a/manager/templates/main/home.jade
+++ b/manager/templates/main/home.jade
@@ -2,4 +2,22 @@
 
 block content
 
-  h1 Welcome to the <b>Brand Repository</b> of the <b>Open Knowledge Foundation</b> 
+  h1 Welcome to the <b>Brand Repository</b> of the <b>Open Knowledge Foundation</b>
+  
+  b
+  | Open Knowledge Foundation creates BSIN 
+  (Brand Standard Identifier Number) to assign to each brand an unique worldwide identifier.
+
+  The first objective of BSIN is to separate the brand and product management which are 2 differents concepts. Brand can be used without products and the inverse isn’t true, that’s why this brand repository exists.
+
+  BSIN is a code of 6 alphanumeric characters. The stability and reliability of this code are the roots of the projects. As a Master Data repository, the data quality is the heart of the project and all movement are traced, justified and multichecked by several moderators (or administrators for the most unsafe operations. Even deletion are logical and explained).
+
+  As a worldwide repository, OKFN brand repository has the mission to propagate these master data and several types of data flows are (or will be) available for that: from the dump, to the daily synchronization data flow or API to have a real time specific information.
+
+  The connexion with existing source of information is also a very important axis of development. For example, we propose linked to wikipedia to have more information about a brand or brand owner or to get high quality logos. 
+
+  This repository is managed by organizations using brands and for which the management  of a brand repository is not the heart of these job or at least, not their added value.
+
+  If you want to participate to expansion of the repository, you can propose a brand on the public form of the website. We would be also very happy to welcome you as a moderator of the repository if you use BSIN code in your applications.
+
+  Do not hesitate to contact the administrator team at the following address : ???
