Changing dump mode (daily rather than live). Closes #42

--- a/manager/apps/main/templates/main/extract.jade
+++ b/manager/apps/main/templates/main/extract.jade
@@ -9,7 +9,7 @@ block content
 
   p Latest dump :
 
-  a(href="{% url 'dump' %}") Current live dump
+  a(href="{{ MEDIA_URL }}dumps/latest.csv") Current live dump
 
   h1 API
 
