Remove owner integration. Closes #58

--- a/manager/apps/main/templates/main/extract.jade
+++ b/manager/apps/main/templates/main/extract.jade
@@ -24,14 +24,16 @@ block content
   b Example, for BSIN 6Y61Z7 : 
   a(href="{% url 'api_dispatch_detail' api_name='v1' resource_name='brand' pk='6Y61Z7' %}?format=json") {% url 'api_dispatch_detail' api_name='v1' resource_name='brand' pk='6Y61Z7' %}?format=json
 
-  h2 Owner list :
+//- Postponed in ticket #58
+//-  h2 Owner list :
+//-
+//-  a(href="{% url 'api_dispatch_list' api_name='v1' resource_name='brand_owner' %}?format=json") {% url 'api_dispatch_list' api_name='v1' resource_name='brand_owner' %}?format=json
 
-  a(href="{% url 'api_dispatch_list' api_name='v1' resource_name='brand_owner' %}?format=json") {% url 'api_dispatch_list' api_name='v1' resource_name='brand_owner' %}?format=json
-
-  h2 Owner detail :
-
-  p {% url 'api_dispatch_detail' api_name='v1' resource_name='brand_owner' pk='OWNER_CD' %}?format=json
-
-  b Example, for owner code 1 : 
-
-  a(href="{% url 'api_dispatch_detail' api_name='v1' resource_name='brand_owner' pk='1' %}?format=json") {% url 'api_dispatch_detail' api_name='v1' resource_name='brand_owner' pk='1' %}?format=json
+//- Postponed in ticket #58
+//-  h2 Owner detail :
+//-
+//-  p {% url 'api_dispatch_detail' api_name='v1' resource_name='brand_owner' pk='OWNER_CD' %}?format=json
+//-
+//-  b Example, for owner code 1 : 
+//-
+//-  a(href="{% url 'api_dispatch_detail' api_name='v1' resource_name='brand_owner' pk='1' %}?format=json") {% url 'api_dispatch_detail' api_name='v1' resource_name='brand_owner' pk='1' %}?format=json
