--- a/manager/apps/brand/templates/brand/brandproposalplaceholder.jade
+++ b/manager/apps/brand/templates/brand/brandproposalplaceholder.jade
@@ -6,7 +6,7 @@ block style
 block content
 
   h1 Propose a new brand
-  form(action="/brand/new/", enctype="multipart/form-data", method="post")
+  form(action='{% url "brandproposal" %}', enctype="multipart/form-data", method="post")
     {% csrf_token %}
     {{ form.as_p }}
     input(type="submit", value="Submit")
